# tree-sitter-bsl

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  RELEASE_NOTES.md  binding.gyp  example-file  grammar.js  index.html  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-bsl.wasm  tree-sitter.json
.github/workflows/: ci.yml  lint.yml  publish.yml
bindings/go/: binding.go  binding_test.go
bindings/java/: build.gradle
bindings/kotlin/: build.gradle.kts
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bsl/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
examples/: example-file.bsl
src/: grammar.json  node-types.json  parser.c
test/corpus/: access.bsl  assignment.bsl  execute.bsl  expressions.bsl  incomplete-expressions.bsl  methods.bsl
