[package]
name = "tree-sitter-bsl"
description = "1C (BSL) language"
version = "0.1.1"
authors = ["alkoleft"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bsl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-bsl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
